--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-cayman
 title: Welcome to the October Hackathon page!
 description: Feel free to bookmark this page and utilize GitHub for your specific hacking group needs!
