--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
+$section-headings-color: #0086b3;
 title: Welcome to the October Hackathon page!
 description: Feel free to bookmark this page and utilize GitHub for your specific hacking group needs!
